force-app/main/default/objects/Property__c/fields/Adress__c.field-meta.xml
<CustomField>
    <fullName>Adress__c</fullName>
    <label>Adress</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>