force-app/main/default/objects/Property__c/fields/Photos__c.field-meta.xml
<CustomField>
    <fullName>Photos__c</fullName>
    <label>Photos</label>
    <length>18</length>
    <type>Text</type>
</CustomField>