force-app/main/default/objects/Property__c/fields/Possible_Dates__c.field-meta.xml
<CustomField>
    <fullName>Possible_Dates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Possible Dates</label>
    <referenceTo>Possible_Dates__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>