force-app/main/default/objects/Property__c/fields/Total_Ocu__c.field-meta.xml
<CustomField>
    <fullName>Total_Ocu__c</fullName>
    <label>Total Occupancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>