force-app/main/default/objects/Property__c/listViews/Small_props.listView-meta.xml
<ListView>
    <fullName>Small_props</fullName>
    <columns>NAME</columns>
    <columns>Total_Rooms__c</columns>
    <columns>Total_Bathrooms__c</columns>
    <columns>Price_x_night__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Rooms__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Small props</label>
</ListView>